fix(react-video-demo): make other users message bubbles visible

--- a/sample-apps/react/react-video-demo/src/styles/chat.css
+++ b/sample-apps/react/react-video-demo/src/styles/chat.css
@@ -10,19 +10,16 @@
 
   --str-chat__message-input-background-color: var(--color-video-grey-800);
 
-  --str-chat__own-message-bubble-background-color: #272a30;
 
-  --str-chat__message-reactions-option-selected-background-color: var(
-    --color-video-grey-600
-  );
+  --str-chat__message-reactions-option-selected-background-color: #272a30;
   --str-chat__own-message-reaction-color: #ffffff;
   --str-chat__own-message-reaction-background-color: #121416;
   --str-chat__avatar-background-color: #005fff;
 
   --str-chat__message-textarea-color: #72767E;
   --str-chat__message-send-disabled-color: #272a30;
-  --str-chat__message-bubble-background-color: #1C1E22;
-  /*--str-chat__message-list-background-color: #000;*/
+  --str-chat__message-bubble-background-color: #272a30;
+  --str-chat__own-message-bubble-background-color: #272a30;
 }
 
 .str-chat__channel .str-chat__container {
@@ -200,9 +197,6 @@
   display: none;
 }
 
-.str-chat__message.str-chat__message--me .str-chat__message-bubble {
-  @apply text-video-grey-200;
-}
 
 
 .str-chat__edit-message-form
